Configure with idpsfy
add configuration for repoc

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,9 +10,9 @@
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,600" type="text/css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 	
-    <meta name="salesforce-community" content="https://tuesdaynight.force.com/el">
-    <meta name="salesforce-client-id" content="3MVG9xOCXq4ID1uF8V6oKd32SPVi6FHwEOQlQ5BjvaKX.5QZpGe4Z3F4fc6KvMYsQ.fi314cp0oZ8KpOBs4Mh">
-    <meta name="salesforce-redirect-uri" content="https://boiling-brushlands-41143.herokuapp.com/_callback">
+    <meta name="salesforce-community" content="https://idpsfy-developer-edition.eu11.force.com/sfyIdp">
+    <meta name="salesforce-client-id" content="SomfyIndentityForPlatformIdentity.sfy">
+    <meta name="salesforce-redirect-uri" content="https://identityjmc.herokuapp.com/_callback">
     <meta name="salesforce-mode" content="modal">
     <meta name="salesforce-server-callback" content="true">
     <meta name="salesforce-namespace" content="">
@@ -22,8 +22,8 @@
     <meta name="salesforce-self-register-enabled" content="false">
     <meta name="salesforce-login-handler" content="onLogin">
     <meta name="salesforce-logout-handler" content="onLogout">
-	<link href="https://tuesdaynight.force.com/el/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
-    <script src="https://tuesdaynight.force.com/el/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
+	<link href="https://idpsfy-developer-edition.eu11.force.com/sfyIdp/servlet/servlet.loginwidgetcontroller?type=css" rel="stylesheet" type="text/css" />
+    <script src="https://idpsfy-developer-edition.eu11.force.com/sfyIdp/servlet/servlet.loginwidgetcontroller?type=javascript_widget" async defer></script>
   </head>
   
   <body>
